# iniparse

./: README.md  pyproject.toml
src/iniparse/: __init__.py  _core.py  _errors.py
tests/: conftest.py  test_basic.py  test_errors.py  test_inheritance.py  test_interpolation.py  test_serialize.py
